--- a/intex2/Pages/Account/Login.cshtml
+++ b/intex2/Pages/Account/Login.cshtml
@@ -30,7 +30,7 @@
                             <input class="d-inline-block align-middle w-auto mb-0 margin-5px-right" type="checkbox" name="account">
                             <span class="d-inline-block align-middle">Remember me</span>
                         </label>
-                        <button class="btn btn-medium btn-fancy btn-dark-gray w-100 submit" type="submit">Login</button>
+                        <button class="btn btn-medium btn-fancy btn-dark-gray w-100" type="submit">Submit</button>
                         <p class="text-center margin-20px-top mb-0"><a asp-page="CreateUser" class="btn btn-link btn-medium text-extra-dark-gray">Create a new account</a></p>
                     </form>
                 </div>
