--- a/intex2/Pages/Account/_Layout.cshtml
+++ b/intex2/Pages/Account/_Layout.cshtml
@@ -26,7 +26,7 @@
             <div class="container-fluid nav-header-container">
                 <!-- start logo -->
                 <div class="col-auto col-sm-6 col-lg-2 mr-auto pl-lg-0">
-                    <a class="nav-item text-black font-weight-700" asp-area="" asp-controller="Home" asp-action="Index">Researcher Pages</a>
+                    <a class="nav-item text-black font-weight-700" href="#">Researcher Pages</a>
                 </div>
                 <div class="col-auto col-lg-8 menu-order px-lg-0">
                     <button class="navbar-toggler float-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-label="Toggle navigation">
