--- a/intex2/Pages/Roles/Create.cshtml
+++ b/intex2/Pages/Roles/Create.cshtml
@@ -1,15 +1,42 @@
 ﻿@page
+
 @model CreateModel
-<h5 class="bg-primary text-white text-center p-2">Create Role</h5>
-<form method="post">
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="form-group">
-        <label>Role Name</label>
-        <input name="Name" class="form-control" value="@Model.Name" />
+
+<!-- start section -->
+<section class="overflow-visible border-top border-color-medium-gray bg-light-gray">
+    <div class="container">
+        <div class="row margin-5-half-rem-bottom align-items-center">
+            <div class="col-12 col-lg-6 col-md-7 text-center text-md-left sm-margin-10px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
+                <h5 class="alt-font font-weight-600 text-extra-dark-gray letter-spacing-minus-1px text-uppercase margin-5px-bottom">Create Role</h5>
+                <p class="m-0 d-block">Enter the information below and then click submit!</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 p-0 wow animate__fadeIn" data-wow-delay="0.4s">
+                <div>
+                    <div class="swiper-wrapper">
+                        <!-- start info banner slider item -->
+                        <div class="swiper-slide box-shadow-small">
+                            <div class="position-relative bg-white padding-3-rem-all md-padding-4-rem-lr text-large">
+                                <form method="post">
+                                    <div asp-validation-summary="All" class="text-danger"></div>
+                                    <div class="form-group">
+                                        <label>Role Name</label>
+                                        <input name="Name" value="@Model.Name" />
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                    <a class="btn btn-fancy btn-dark-gray" asp-page="List">Back</a>
+                                </form>
+                            </div>
+                        </div>
+                        <!-- end info banner slider item -->
+                    </div>
+                </div>
+            </div>
+        </div><br><br><br>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-    <a class="btn btn-secondary" asp-page="list">Back</a>
-</form>
+</section>
+<!-- end section -->
 
 <!--The user is presented with a form containing an input element to specify the name of the new role. When the form is submitted,
 the OnPostAsync method creates a new IdentityRole object and passes it to the CreateAsync method.-->
