--- a/intex2/Pages/Users/Editor.cshtml
+++ b/intex2/Pages/Users/Editor.cshtml
@@ -1,30 +1,64 @@
 ﻿@page "{id}"
+
 @model EditorModel
 
-<!--Editing the selected account-->
-<h5 class="bg-warning text-white text-center p-2">Edit User</h5>
-<form method="post">
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="form-group">
-        <label>ID</label>
-        <input name="Id" class="form-control" value="@Model.Id" disabled />
-        <input name="Id" type="hidden" value="@Model.Id" />
+<!-- start page title -->
+<section class="wow animate__fadeIn bg-light-gray padding-25px-tb page-title-small">
+    <div class="container">
+        <div class="row align-items-center justify-content-center">
+            <div class="col-12 col-xl-4 col-lg-6 justify-content-center justify-content-lg-end text-small alt-font md-margin-10px-top">
+                <br>
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <label>User Name</label>
-        <input name="UserName" class="form-control" value="@Model.UserName" />
+</section>
+<!-- end page title -->
+<!-- start section -->
+<section class="wow animate__fadeIn" style="padding: 70px;">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-xl-5 col-md-6 lg-padding-30px-lr md-padding-15px-lr sm-margin-40px-bottom">
+                <div class="m-1 text-danger text-center" asp-validation-summary="All"></div>
+                <h6 class="alt-font text-center font-weight-700 text-extra-dark-gray">Edit User</h6>
+                <form class="bg-light-gray padding-4-rem-all lg-margin-35px-top md-padding-2-half-rem-all" method="post">
+                    <label class="margin-15px-bottom">Id <span class="required-error text-radical-red">*</span></label>
+                    <input class="small-input bg-white margin-20px-bottom required" type="text" name="Id" asp-for="Id" value="@Model.Id" disabled>
+                    <input class="small-input bg-white margin-20px-bottom required" type="text" name="Id" asp-for="Id" value="@Model.Id" hidden>
+                    <label class="margin-15px-bottom">Email <span class="required-error text-radical-red">*</span></label>
+                    <input class="small-input bg-white margin-20px-bottom required" type="text" name="Email" asp-for="Email" value="@Model.Email" placeholder="Enter your email">
+                    <label class="margin-15px-bottom">Username <span class="required-error text-radical-red">*</span></label>
+                    <input class="small-input bg-white margin-20px-bottom required" type="text" name="UserName" asp-for="UserName" value="@Model.UserName" placeholder="Enter your username">
+                    <label class="margin-15px-bottom">Password <span class="required-error text-radical-red">*</span></label>
+                    <input class="small-input bg-white margin-20px-bottom required" type="password" name="Password" asp-for="Password" value="@Model.Password" placeholder="Enter your password">
+                    <label class="margin-25px-bottom">
+                        <input class="d-inline-block align-middle w-auto mb-0 margin-5px-right" type="checkbox" name="account">
+                        <span class="d-inline-block align-middle">Remember me</span>
+                    </label>
+                    <button class="btn btn-medium btn-fancy btn-dark-gray w-100 submit" type="submit">Submit</button>
+                </form>
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <label>Email</label>
-        <input name="Email" class="form-control" value="@Model.Email" />
-    </div>
-    <div class="form-group">
-        <label>New Password</label>
-        <input name="Password" class="form-control" value="@Model.Password" />
-    </div>
-    <button type="submit" class="btn btn-warning">Submit</button>
-    <a class="btn btn-secondary" asp-page="list">Back</a>
-</form>
+
+</section>
+<!-- end section -->
+
+<style>
+    .btn.btn-outline-dark-gray {
+        background: #fff;
+        border-color: #232323;
+        color: #232323;
+    }
+
+        .btn.btn-outline-dark-gray:hover {
+            background: #232323;
+            border-color: #232323;
+            color: #fff;
+            padding: .375rem .75rem;
+        }
+</style>
+
+
 @functions {
     public class EditorModel : PageModel
     {
