--- a/intex2/Pages/Users/MomiasDatabase.cshtml
+++ b/intex2/Pages/Users/MomiasDatabase.cshtml
@@ -1,44 +1,189 @@
-﻿
-@*Page to show all records in Database and Filter by Category*@
-
-@*@model ...*@
+﻿@*Page to show all records in Database and Filter by Category*@
 
 @page
-<div class="text-center">
-    <h1 class="h1">Fag el-Gamous Database</h1>
+<!-- start section -->
+<section class="overflow-visible border-top border-color-medium-gray bg-light-gray">
+    <div class="container">
+        <div class="row"></div>
+        <div class="col-12 text-center" style="max-width: 1200px">
+            <div class="bg-medium-dark-gray"></div>
+            <div class="row">
+                <div class="col-12 col-xl-4 col-md-3 col-sm-10 align-items-left text-black text-md-left sm-margin-30px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
+                    <h5 class="alt-font font-weight-600 mb-0 md-w-90 sm-w-100"><strong>Filter your search</strong></h5><br>
+                    <!-- start collapsibles -->
+                    <div>
+                        <!-- collapsible 1 -->
+                        <button type="button" class="my-collapsible">Gender</button>
+                        <div class="my-content">
+                            <input type="checkbox" class="checkbox" /> Male<br>
+                            <input type="checkbox" class="checkbox" /> Female
+                        </div>
 
-    <p>Content where the database is going to show</p>
+                        <!-- collapsible 2 -->
+                        <button type="button" class="my-collapsible">Age</button>
+                        <div class="my-content">
+                            <input type="checkbox" class="checkbox" /> 0-5 yrs<br>
+                            <input type="checkbox" class="checkbox" /> 5-10 yrs<br>
+                            <input type="checkbox" class="checkbox" /> 10-20 yrs<br>
+                            <input type="checkbox" class="checkbox" /> 20-30 yrs<br>
+                            <input type="checkbox" class="checkbox" /> 30-50 yrs<br>
+                            <input type="checkbox" class="checkbox" /> 50+ yrs<br>
+                        </div>
 
-    @*Space for Database Table Rough Draft
-        <table class="table table-bordered table-hover table-secondary">
-            <thead>
-                <tr>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
+                        <!-- collapsible 3 -->
+                        <button type="button" class="my-collapsible">Hair Color</button>
+                        <div class="my-content">
+                            <input type="checkbox" /> Black<br>
+                            <input type="checkbox" /> Blonde<br>
+                            <input type="checkbox" /> Brown<br>
+                        </div>
 
+                        <!-- collapsible 4 -->
+                        <button type="button" class="my-collapsible">Burial Depth</button>
+                        <div class="my-content">
+                            <input type="checkbox" /> 0-1 meters<br>
+                            <input type="checkbox" /> 1-2 meters<br>
+                            <input type="checkbox" /> 2-3 meters<br>
+                            <input type="checkbox" /> 3-4 meters<br>
+                            <input type="checkbox" /> 4-5 meters<br>
+                            <input type="checkbox" /> 5+ meters<br>
+                        </div>
 
-                @foreach(var x in Model)
-                {
-                    <tr>
-                        <td></td>
-                    </tr>
+                        <!-- collapsible 5 -->
+                        <button type="button" class="my-collapsible">Length</button>
+                        <div class="my-content">
+                            <input type="checkbox" /> 0.0 - 0.5 m<br>
+                            <input type="checkbox" /> 0.5 - 0.1 m<br>
+                            <input type="checkbox" /> 1.0 - 1.5 m<br>
+                            <input type="checkbox" /> 1.5 - 2.0 m<br>
+                            <input type="checkbox" /> 2.0+ m<br>
+                        </div>
+                    </div><br>
+                    <a href="#"><input class="btn btn-fancy btn-medium btn-dark-gray" value="Search" /></a>
+                    <!-- end collapsibles -->
+                </div>
+                <!-- Card 1 (placeholder) -->
+                <div class="col-12 col-xl-8 col-md-9 text-center text-md-left wow animate__fadeIn" data-wow-delay="0.2s">
+                    <h5 class="alt-font text-black font-weight-700 mb-0 md-w-90 sm-w-100"><strong>Search results</strong></h5>
+                    <i>Click on the burial to learn more</i>
+                    <div>
+                        <br>
+                        <div class="swiper-slide box-shadow-small box-shadow-extra-large-hover">
+                            <a href="mummy.html">
+                                <div class="row">
+                                    <div class="col-12 text-center" style="max-width: 1200px">
+                                        <div class="bg-medium"></div>
+                                        <div class="row">
+                                            <div class="col-12 col-xl-4 col-md-3 col-sm-10 align-items-center text-black text-md-left sm-margin-30px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
+                                                <img src="~/images/mummy1.jpg" width="90%">
+                                            </div>
+                                            <div class="col-12 col-xl-8 col-md-9 text-center text-md-left wow animate__fadeIn" data-wow-delay="0.2s">
+                                                <div class="position-relative bg-white padding-2-rem-all md-padding-2-rem-lr">
+                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Name:</span> Devan<br>
+                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Location:</span> 120/130 N 10/20 NW #49,50<br>
+                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Gender:</span> Male<br>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div><br>
+                    <!-- Card 2 (placeholder) -->
+                    <div>
+                        <div class="swiper-slide box-shadow-small box-shadow-extra-large-hover">
+                            <a href="mummy.html">
+                                <div class="row">
+                                    <div class="col-12 text-center" style="max-width: 1200px">
+                                        <div class="bg-medium"></div>
+                                        <div class="row">
+                                            <div class="col-12 col-xl-4 col-md-3 col-sm-10 align-items-center text-black text-md-left sm-margin-30px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
+                                                <img src="~/images/mummy2.jpg" width="90%">
+                                            </div>
+                                            <div class="col-12 col-xl-8 col-md-9 text-center text-md-left wow animate__fadeIn" data-wow-delay="0.2s">
+                                                <div class="position-relative bg-white padding-2-rem-all md-padding-2-rem-lr">
+                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Name:</span> Tyler<br>
+                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Location:</span> 120/130 N 10/20 NW #49,50<br>
+                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Gender:</span> Male<br>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div><br>
+                    <!-- Card 3 (placeholder) -->
+                    <div>
+                        <div class="swiper-slide box-shadow-small box-shadow-extra-large-hover">
+                            <a href="mummy.html">
+                                <div class="row">
+                                    <div class="col-12 text-center" style="max-width: 1200px">
+                                        <div class="bg-medium"></div>
+                                        <div class="row">
+                                            <div class="col-12 col-xl-4 col-md-3 col-sm-10 align-items-center text-black text-md-left sm-margin-30px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
+                                                <img src="~/images/mummy3.jpg" width="90%">
+                                            </div>
+                                            <div class="col-12 col-xl-8 col-md-9 text-center text-md-left wow animate__fadeIn" data-wow-delay="0.2s">
+                                                <div class="position-relative bg-white padding-2-rem-all md-padding-2-rem-lr">
+                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Name:</span> Grace<br>
+                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Location:</span> 120/130 N 10/20 NW #49,50<br>
+                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Gender:</span> Female<br>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div><br>
+                    <!-- Card 4 (placeholder) -->
+                    <div>
+                        <div class="swiper-slide box-shadow-small box-shadow-extra-large-hover">
+                            <a href="mummy.html">
+                                <div class="row">
+                                    <div class="col-12 text-center" style="max-width: 1200px">
+                                        <div class="bg-medium"></div>
+                                        <div class="row">
+                                            <div class="col-12 col-xl-4 col-md-3 col-sm-10 align-items-center text-black text-md-left sm-margin-30px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
+                                                <img src="~/images/mummy4.jpg" width="90%">
+                                            </div>
+                                            <div class="col-12 col-xl-8 col-md-9 text-center text-md-left wow animate__fadeIn" data-wow-delay="0.2s">
+                                                <div class="position-relative bg-white padding-2-rem-all md-padding-2-rem-lr">
+                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Name:</span> Sal<br>
+                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Location:</span> 120/130 N 10/20 NW #49,50<br>
+                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Gender:</span> Male<br>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</section>
 
-                     <td>
-                        <form asp-action="SingleEntry" asp-action="Home" method="get">
-                            <input type="hidden" name="Id" value="@x.Id" />
-                            <button type="submit" class="btn btn-sm btn-primary">
-                                View All Record Info
-                            </button>
-                        </form>
-                    </td>
-                }
+<script>
+    var coll = document.getElementsByClassName("my-collapsible");
+    var i;
 
-           </tbody>
-        </table>*@
-</div>
+    for (i = 0; i < coll.length; i++) {
+        coll[i].addEventListener("click", function () {
+            this.classList.toggle("active");
+            var content = this.nextElementSibling;
+            if (content.style.display === "block") {
+                content.style.display = "none";
+            } else {
+                content.style.display = "block";
+            }
+        });
+    }
+</script>
+
+<!-- end section -->
